--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -224,12 +224,26 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="NDev.h" />
+    <ClInclude Include="NDevData.h" />
+    <ClInclude Include="NDevDefinitions.h" />
     <ClInclude Include="NDevLIB.h" />
+    <ClInclude Include="NDevMath.h" />
+    <ClInclude Include="NDevMathAliases.h" />
+    <ClInclude Include="NDevMathDistributions.h" />
+    <ClInclude Include="NDevMathExtend.h" />
+    <ClInclude Include="NDevMathPoint.h" />
+    <ClInclude Include="NDevModel.h" />
+    <ClInclude Include="NDevPoint.h" />
+    <ClInclude Include="NDevResource.h" />
+    <ClInclude Include="NDevSequence.h" />
+    <ClInclude Include="NDevTypes.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NDevLIB.cpp" />
+    <ClCompile Include="NDevResource.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
