Add Record begin, Iteratore begin, UseDefaultParameters virtual function.

--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -202,7 +202,7 @@
     <ClInclude Include="..\lib\NDev.h" />
     <ClInclude Include="..\lib\NDevData.h" />
     <ClInclude Include="..\lib\NDevDefinitions.h" />
-    <ClInclude Include="..\lib\NDevLIB.h" />
+    <ClInclude Include="..\lib\NDevIterator.h" />
     <ClInclude Include="..\lib\NDevMath.h" />
     <ClInclude Include="..\lib\NDevMathAliases.h" />
     <ClInclude Include="..\lib\NDevMathDistributions.h" />
@@ -210,10 +210,12 @@
     <ClInclude Include="..\lib\NDevMathPoint.h" />
     <ClInclude Include="..\lib\NDevModel.h" />
     <ClInclude Include="..\lib\NDevPoint.h" />
+    <ClInclude Include="..\lib\NDevRecord.h" />
     <ClInclude Include="..\lib\NDevResource.h" />
     <ClInclude Include="..\lib\NDevSequence.h" />
     <ClInclude Include="..\lib\NDevSimulation.h" />
     <ClInclude Include="..\lib\NDevTypes.h" />
+    <ClInclude Include="NDevLIB.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
