Complete Shift in Definitions.

--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -200,10 +200,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\NDev.h" />
+    <ClInclude Include="..\lib\NDevArray.h" />
     <ClInclude Include="..\lib\NDevBases.h" />
     <ClInclude Include="..\lib\NDevBytes.h" />
     <ClInclude Include="..\lib\NDevData.h" />
     <ClInclude Include="..\lib\NDevDefinitions.h" />
+    <ClInclude Include="..\lib\NDevGraph.h" />
+    <ClInclude Include="..\lib\NDevHeap.h" />
     <ClInclude Include="..\lib\NDevIterator.h" />
     <ClInclude Include="..\lib\NDevKDTree.h" />
     <ClInclude Include="..\lib\NDevKTree.h" />
@@ -227,6 +230,7 @@
     <ClInclude Include="..\lib\NDevSimulation.h" />
     <ClInclude Include="..\lib\NDevStack.h" />
     <ClInclude Include="..\lib\NDevBuffer.h" />
+    <ClInclude Include="..\lib\NDevTree.h" />
     <ClInclude Include="..\lib\NDevTypes.h" />
     <ClInclude Include="..\lib\NDevWindow.h" />
     <ClInclude Include="stdafx.h" />
