Prepare display, add Eps functions, refactor some namings and overloads.

--- a/NDevTEST/NDevTEST.vcxproj
+++ b/NDevTEST/NDevTEST.vcxproj
@@ -174,7 +174,9 @@
     </ClCompile>
     <ClCompile Include="unittestNDev.cpp" />
     <ClCompile Include="unittestNDevDefinitions.cpp" />
+    <ClCompile Include="unittestNDevDisplay.cpp" />
     <ClCompile Include="unittestNDevMath.cpp" />
+    <ClCompile Include="unittestNDevMathSequence.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NDevLIB\NDevLIB.vcxproj">
